--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npx prisma generate && tsc",
+    "build": "node node_modules/prisma/build/index.js generate && tsc",
     "start": "node dist/index.js",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev",
-    "prisma:push": "npx prisma db push",
+    "prisma:generate": "node node_modules/prisma/build/index.js generate",
+    "prisma:migrate": "node node_modules/prisma/build/index.js migrate dev",
+    "prisma:push": "node node_modules/prisma/build/index.js db push",
     "test": "jest --verbose",
     "lint": "eslint src"
   },
@@ -22,6 +22,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "socket.io": "^4.8.3",
+    "prisma": "^5.22.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
@@ -34,7 +35,6 @@
     "@types/uuid": "^11.0.0",
     "eslint": "^10.0.0",
     "jest": "^30.2.0",
-    "prisma": "^5.22.0",
     "ts-jest": "^29.4.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
