--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "node node_modules/prisma/build/index.js generate && tsc",
+    "build": "npx prisma generate && tsc",
     "start": "node dist/index.js",
-    "prisma:generate": "node node_modules/prisma/build/index.js generate",
-    "prisma:migrate": "node node_modules/prisma/build/index.js migrate dev",
-    "prisma:push": "node node_modules/prisma/build/index.js db push",
+    "postinstall": "npx prisma generate",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:push": "npx prisma db push",
     "test": "jest --verbose",
     "lint": "eslint src"
   },
