--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
