--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "prisma generate && tsc",
+    "build": "node node_modules/prisma/build/index.js generate && tsc",
     "start": "node dist/index.js",
-    "start:prod": "prisma db push && node dist/index.js",
-    "postinstall": "prisma generate",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:push": "prisma db push",
+    "start:prod": "node node_modules/prisma/build/index.js db push && node dist/index.js",
+    "postinstall": "node node_modules/prisma/build/index.js generate",
+    "prisma:generate": "node node_modules/prisma/build/index.js generate",
+    "prisma:migrate": "node node_modules/prisma/build/index.js migrate dev",
+    "prisma:push": "node node_modules/prisma/build/index.js db push",
+    "deploy": "npm install && npm run build",
     "test": "jest --verbose",
     "lint": "eslint src"
   },
